# rust-market-microstructure-analyzer

./: .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
docs/: API.md  architecture.mmd
examples/: orderbook_analysis.rs  pattern_detection.rs  tape_reading.rs
src/: lib.rs  main.rs  types.rs
src/metrics/: mod.rs
src/orderbook/: mod.rs
src/patterns/: mod.rs
src/tape/: mod.rs
src/visualization/: mod.rs
tests/: test_main.rs
