[package]
name = "market-microstructure-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Demetrios Lafis"]
description = "Market microstructure analytics engine with order flow and tape reading"
license = "MIT"
repository = "https://github.com/galafis/rust-market-microstructure-analyzer"
keywords = ["trading", "market-microstructure", "orderbook", "analytics", "hft"]
categories = ["finance", "algorithms"]

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
tungstenite = "0.24"
ndarray = "0.16"

[[bin]]
name = "market-analyzer"
path = "src/main.rs"
